Bug 114648 - When creating any new document from LibreOffice OSX Dock icon, new document window doesn't get focus ( steps in comment 4 )
Summary: When creating any new document from LibreOffice OSX Dock icon, new document w...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.0.0.1 rc
Hardware: All macOS (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords: bibisected, bisected, regression
: 116455 (view as bug list)
Depends on:
Blocks: Dialog
  Show dependency treegraph
 
Reported: 2017-12-22 12:37 UTC by danyal.kurban
Modified: 2018-04-05 14:13 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description danyal.kurban 2017-12-22 12:37:20 UTC
Description:
When I try to create a new Database document, a new window is opened. But it was not possible to take ana actions since where was a options menu which was hidden behind the  mentioned window. 

Steps to Reproduce:
1.start libre office
2.menu file > create new > database
3.

Actual Results:  
as summerized in description

Expected Results:
options menu should be shown as the most front window


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_2) AppleWebKit/604.4.7 (KHTML, like Gecko) Version/11.0.2 Safari/604.4.7
Comment 1 Alex Thurgood 2017-12-22 16:07:47 UTC
Confirming, but only when launched from OSX Dock. 

As far as I can remember, launching LO modules from the Dock has behaved like this for quite a while.



Version: 5.4.3.2
Build ID: 92a7159f7e4af62137622921e809f8546db437e5
Threads CPU : 8; OS : Mac OS X 10.13.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group
Comment 2 Tor Lillqvist 2018-01-04 11:24:28 UTC
Sorry, what window exactly do you mean with the "new document window" that doesn't get focus? The "Database Wizard" window?
Comment 3 Tor Lillqvist 2018-01-04 11:27:31 UTC
And Alex, isn't your case totally different? In the original comment, he already has LibreOffice running, and then chooses File > New > Database , right? But your Dock case is different.
Comment 4 Telesto 2018-01-04 11:55:05 UTC
STR (as far I can tell)
1. Open - for example - a Writer Document
2. File > create new > database -> grey base screen shows up. the wizard Is hidden behind it.
Comment 5 Xisco Faulí 2018-03-19 17:24:50 UTC
Reverting https://cgit.freedesktop.org/libreoffice/core/commit/?id=6f31670783b3445a8073bd49fe4c041b655e91b3 fixes the issue...

Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2017-11-23 14:05:26 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2017-11-24 09:55:17 +0100
commit 6f31670783b3445a8073bd49fe4c041b655e91b3 (patch)
tree 3cbfc77e7f9e8191c6eaded7f92633f9808ba414
parent 99534540df148513fc0bb9622b7285e10b285ccb (diff)
set new document window as parent for dialogs during load
and exit typedetection early and completely if application quits
while detecting

During typedetection, before loading proper, we have the hidden window as
parent so warnings are not modal to existing windows and they are cancelled on
exit.

Once we do have a window, then reinit interaction handler to have that window
as the parent for any further dialogs.

Bisected with: bibisect-linux64-6.0

Adding Cc: to Caolán McNamara
Comment 6 Xisco Faulí 2018-03-19 17:25:39 UTC
*** Bug 116455 has been marked as a duplicate of this bug. ***
Comment 7 Caolán McNamara 2018-03-20 14:19:03 UTC
The blank window is the frame which will be filled with the database. New document frame are now shown early so that any import warning dialogs can use it as a parent to not lock unrelated windows. The wizard is using the wrong parent dialog.

Two options are to
a) make the wizard use the new frame as its parent so its modal to that window.
b) make the new frame hidden until the database wizard is complete
Comment 8 Commit Notification 2018-03-20 16:25:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=579411ccc38642b395fbfb25c9b4e9e9d280b5d1

Resolves: tdf#114648 don't show new document until wizard is finished

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2018-03-20 16:28:21 UTC
I'll go with hiding it, backports to 6-0 in gerrit
Comment 10 Xisco Faulí 2018-03-28 14:38:58 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: a488c7ad2763b944713997911c1ddb0315d8c93f
CPU threads: 8; OS: Mac OS X 10.13.3; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-03-26_00:38:29
Locale: en-US (en_ES.UTF-8); Calc: group
Comment 11 Commit Notification 2018-04-05 14:13:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d604d977a748e982c3e71f09daf08ed5af778ed0&h=libreoffice-6-0

tdf#114648 tdf#115683 don't show new document until dialogs are gone

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.