Resolves: tdf#114648 don't show new document until wizard is finished

Change-Id: Ia9cb3fd549c17cb602fa3d7f9163a89697395c77
Reviewed-on: https://gerrit.libreoffice.org/51648
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>